@@ -318,6 +318,7 @@ public:
   QCursor getMouseCursor(unsigned int mx,unsigned int my);
   KWFrame *getFirstSelectedFrame();
   KWFrame *getFirstSelectedFrame(int &_frameset);
+  int getFrameSetNum(KWFrameSet* fs) { return frames.findRef(fs); }
 
   void print(QPainter *painter,QPrinter *printer,float left_margin,float top_margin);
   
