@@ -713,3 +713,9 @@ Reggie, 23.1.1999:
 - Added dialog for inserting rows/cols in tables
 - Implemented inserting rows in tables
 - Implemented inserting columns in tables
+
+Reggie, 24.1.1999:
+------------------
+- If the cursor is in a table, CTRL-Return inserts a new row below the row, where the cursor currently is
+- If the cursor is in a normal text frame, CTRL-Return makes a hard break (jumps to next frame)
+- Added menu item for inserting a hard frame break
